kyverno-allow-vault.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-auth-to-vault
spec:
  podSelector:
    matchLabels:
      app: flask-template-auth
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector: {}
      ports:
        - port: 8200
          protocol: TCP
    - to: []
      ports:
        - port: 53
          protocol: UDP
